--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,18 @@
-<app-calculator></app-calculator>
+<div class="container">
+    <div class="animated-text">
+      <span>calculate('Git-abby'); cat-ch(error) => console(ERROR - Type Error).log</span>
+    </div>
+    <app-calculator></app-calculator>
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+</div>
