--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -1,4 +1,4 @@
-<div class="calculator">
+<div class="calculator col-12 col-md-6">
   <div class="calculator__output">{{stringToEval || "0"}}</div>
   <div class="calculator__keys">
     <button
