--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="animated-text">
-      <span>calculate('Git-abby'); cat-ch(error) => console(ERROR - Type Error).log</span>
+      <span>calculate(<b class="git">'Git-abby'</b>); cat-ch(error) => console(ERROR - Type Error).log </span>
     </div>
     <app-calculator></app-calculator>
     <div class="box">
